@@ -32,6 +32,8 @@
         Save HvTOTALKEYS at run-time as max added to the number of run-time added keys (#178)
         Fix UV uvuformat on 32bit -Duse64bitint (#145)
         op_pmreplstart is now run-time initialized >= 5.10 (#160)
+        Fix UTF8 hashkeys (HEK) mostly (#200), but not yet testc.sh 2001 (compile-time
+          stored utf8 heks)
         * perlcc (2.14): new option --dryrun, -v5 does not -Dsp,-v
          new option -f passthru to C and CC
         * perlcc (2.15): fixed default --spawn: use waitpid which was broken for parallel builds.
